# Django-demo

./: .gitignore  README.md
django-demo/: pyproject.toml
django-demo/todo_list/base/: models.py  urls.py  views.py
django-demo/todo_list/base/migrations/: 0001_initial.py
django-demo/todo_list/base/templates/base/: login.html  main.html  register.html  task_confirm_delete.html  task_form.html  task_list.html
django-demo/todo_list/todo_list/: settings.py
