[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = ""
authors = ["PyJacobito <sobel.jak@gmail.com>"]
readme = "README.md"
packages = [{include = "django_demo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
