[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = ""
authors = ["PyJacobito <sobel.jak@gmail.com>"]
readme = "README.md"
packages = [{include = "django_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
